# po_parser

./: .env  .gitignore  ILM_Order_Tracker.csv  app.py  extractor.py  extractor_openup.ipynb  helpers.py  main.py  packages.txt  po_extracted.csv  pyproject.toml  weight_calc.py
.playgroud/: 101833-001-A.step  102210-001-A.step  bv.ipynb  extractor copy.py
helpers/: agent.py  config.py  data_analysis.py  extractor.py  ui_components.py
pages/: 1_ILM.py  2_Bot.py  2_Westell.py  3_Weight_Calc.py  4_Bot.py  5_PO_Tracking.py
