[project]
name = "po-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "streamlit>=1.38.0",
    "paddlepaddle>=3.1.1",
    "paddleocr[doc-parser]>=3.0",
    "pymupdf>=1.26.3",
    "pandas>=2.2.0",
    "lxml>=4.9.3",
    "pdfplumber>=0.11.0",
    "python-dotenv",
    "plotly",
    "openai>=1.0.0",
    "opencv-python-headless",  # avoids GL dependency
]